--- a/media/view.html
+++ b/media/view.html
@@ -11,6 +11,7 @@
   <div class="row">
     <select id="device"></select>
     <button id="toggle">暂停</button>
+    <button id="clear">清空</button>
     <label style="display:flex;align-items:center;gap:4px;">
       <input id="save" type="checkbox" /> 保存到文件
     </label>
