--- a/media/view.html
+++ b/media/view.html
@@ -8,28 +8,28 @@
   <style>/*INJECT_STYLE*/</style>
 </head>
 <body>
-  <div class="row">
+  <div class="row top-controls">
     <select id="device"></select>
-    <button id="toggle">暂停</button>
-    <button id="clear">清空</button>
     <label style="display:flex;align-items:center;gap:4px;">
       <input id="save" type="checkbox" /> 保存到文件
     </label>
-    <label>包名:</label><input id="pkg" placeholder="com.example.app" style="width:200px" />
-    <label>Tag:</label><input id="tag" value="*" style="width:120px" />
-    <label>Level:</label>
-    <select id="level">
-      <option>V</option><option selected>D</option><option>I</option><option>W</option><option>E</option><option>F</option><option>S</option>
-    </select>
-    <label>Buffer:</label>
-    <select id="buffer">
-      <option selected>main</option><option>system</option><option>events</option><option>radio</option><option>crash</option><option>all</option>
-    </select>
+    <div class="filter">
+      <input id="filter" placeholder="Press ^Space to see suggestions" />
+      <button id="matchCase" title="Match case">Cc</button>
+    </div>
   </div>
   <div class="row-status">
     <div id="status"></div>
   </div>
-  <div id="log"></div>
+  <div class="main">
+    <div class="sidebar">
+      <button id="toggle">暂停</button>
+      <button id="clear">清空</button>
+    </div>
+    <div class="content">
+      <div id="log"></div>
+    </div>
+  </div>
   <script nonce="{{NONCE}}">{{SCRIPT}}</script>
 </body>
 </html>
