Feature:Add the soft-wrap function

--- a/media/view.html
+++ b/media/view.html
@@ -25,6 +25,9 @@
     <div class="sidebar">
       <button id="toggle">暂停</button>
       <button id="clear">清空</button>
+      <label style="display:flex;align-items:center;gap:6px;justify-content:center;">
+        <input id="softWrap" type="checkbox" /> Sp
+      </label>
     </div>
     <div class="content">
       <div id="log"></div>
