--- a/media/view.html
+++ b/media/view.html
@@ -15,7 +15,12 @@
     <div class="row top-controls">
         <select id="device"></select>
         <div class="filter">
-            <input id="filter" placeholder="Press ^Space to see suggestions" />
+            <span class="filter-input-wrap">
+                <input id="filter" placeholder="Press ^Space to see suggestions" />
+                <button id="clearFilter" class="icon-btn filter-clear" aria-label="清除" title="清除" tabindex="-1">
+                    <svg viewBox="0 0 24 24" width="14" height="14" aria-hidden="true"><path fill="currentColor" d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
+                </button>
+            </span>
             <button id="matchCase" class="btn btn-toggle" title="区分大小写" aria-pressed="false">
                 <svg viewBox="0 0 24 24" width="14" height="14" aria-hidden="true">
                     <path fill="currentColor" d="M5 4h14v2H5V4zm5 4h4v2h-4V8zM3 12h18v2H3v-2zm8 4h2v4h-2v-4z" />
@@ -56,11 +61,10 @@
                 </svg>
                 <span class="label">导出</span>
             </button>
-            <label class="switch" title="软换行">
-                <input id="softWrap" type="checkbox" />
-                <span class="slider" aria-hidden="true"></span>
-                <span class="switch-label">Sp</span>
-            </label>
+            <button id="softWrapBtn" class="btn btn-toggle" aria-label="软换行 (Soft-wrap)" title="Soft-wrap" aria-pressed="false">
+                <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><path fill="currentColor" d="M21 3H3v2h18V3zM7 9h10v2H7V9zm-4 6h18v2H3v-2zm8 6H3v-2h8v2z"/></svg>
+                <span class="label">Sp</span>
+            </button>
             <button id="scrollEnd" class="btn" aria-label="滚动到底部" title="Scroll to the End">
                 <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
                     <path fill="currentColor" d="M7 10l5 5 5-5H7zM5 18h14v2H5z" />
