Feature:Add the restart button and logic

--- a/media/view.html
+++ b/media/view.html
@@ -49,6 +49,12 @@
                 </svg>
                 <span id="toggleLabel" class="label">暂停</span>
             </button>
+            <button id="restart" class="btn" aria-label="重启" title="Restart logcat">
+                <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
+                    <path fill="currentColor" d="M12 6V3L8 7l4 4V8c2.76 0 5 2.24 5 5a5 5 0 0 1-8.66 3.54l-1.42 1.42A7 7 0 0 0 19 13c0-3.87-3.13-7-7-7z"/>
+                </svg>
+                <span class="label">重启</span>
+            </button>
             <button id="scrollEnd" class="btn" aria-label="滚动到底部" title="Scroll to the End">
                 <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
                     <path fill="currentColor" d="M7 10l5 5 5-5H7zM5 18h14v2H5z" />
