Complete the CI function

--- a/media/view.html
+++ b/media/view.html
@@ -77,6 +77,12 @@
                 </svg>
                 <span class="label">导出</span>
             </button>
+            <button id="clusterBtn" class="btn btn-toggle" aria-label="语义聚类与去重" title="语义聚类与去重" aria-pressed="false">
+                <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
+                    <path fill="currentColor" d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/>
+                </svg>
+                <span class="label">CI</span>
+            </button>
         </div>
         <div class="content">
             <div id="findBar" class="findbar" hidden>
